# autonomous_slam

./: CMakeLists.txt  Dockerfile  README.md  package.xml
.devcontainer/: devcontainer.json
frontier_explorer/: CMakeLists.txt  package.xml
frontier_explorer/include/frontier_explorer/: frontier_search.hpp
frontier_explorer/src/: frontier_explorer.cpp  frontier_search.cpp
include/: frontier_search.h
launch/: autonomous_slam.launch.py  robot_bringup.launch.py  robot_state_publisher.launch.py  robot_world.launch.py  spawn_robot.launch.py
models/: model.config  model.sdf  model.urdf  xacro_model.urdf
rviz/: urdf_config.rviz
setup/: Dockerfile
setup/.devcontainer/: devcontainer.json
simulation_launch/: CMakeLists.txt  package.xml
simulation_launch/config/: nav2_params.yaml  urdf_config.rviz
simulation_launch/launch/: robot_bringup.launch.py  spawn_robot.launch.py
simulation_launch/models/alphabot2/: model.urdf  model.xacro
src/: autonomous_explorer.cpp  frontier_search.cpp
